1/10/2007 - jdiamond
=====================

 * (trac #165) Tweaked the select box widget to show a "No Data" message whenever there are no options available.  
   The message can be customized by setting the "empty" parameter on the form_field tag.

1/9/2007 - jdiamond
=====================

 * (trac #175) Standardized on "Zip / Postal Code" as a label in the manager and order interfaces.  Also standardized the order of the City, State, Postal Code, and Country fields (in that order) in all forms.

1/8/2007 - jdiamond
=====================

 * (trac #164) Made the Order Interface's page title a setting and gave it its own
   tab on the Manager > Administration > Settings page
 * (trac #152) Added a "public" flag to hosting services, domain services, and products.
   Only products/services with a public flag are available to the customer through the
   Order interface (and the future customer interface).

1/7/2007 - jdiamond
=====================

 * Integrated the dhtmlxTabbar project to provide a DHTML tab bar for the view account,
   view server, and settings pages.  As a result, all of the separate template files
   for each of the tabs were combined into one template for each page.

1/5/2007 - jdiamond
=====================

 * (trac #138) Expanded invoice line-item descriptions to include more information such as term length,
               domain name assigned to hosting service, and expire dates for domains.
 * Changed the "Home" menu item to display the name of the company and made all the other menu items a
   child of this item.
 * Made the "Next Billing Date" field editable for all purchase types

12/21/2006 - jdiamond
=====================

 * (trac #131) Added support for an external "Add-to-Cart" link and a "Whois box"
 * (trac #117) Added a "note" field to the order interface
 * (trac #149) Fixed a data-integrity bug caused by the AccountDBO not deleting associated orders before deleting itself