@@ -253,6 +253,7 @@
     <phrase id="NOTE_TO_CUSTOMER">Note to Customer</phrase>
     <phrase id="NOTIFICATION_EMAIL">Notification E-mail</phrase>
     <phrase id="NOT_REQUIRED">Not Required</phrase>
+    <phrase id="OF">of</phrase>
     <phrase id="ON">on</phrase>
     <phrase id="ONETIME">Onetime</phrase>
     <phrase id="ONETIME_PRICE">Onetime Price</phrase>
@@ -378,6 +379,7 @@
     <phrase id="THEMES">Themes</phrase>
     <phrase id="THERE_ARE_NO_GATEWAY_MODULES">There are no payment gateway modules enabled.</phrase>
     <phrase id="THERE_ARE_NO_HOSTING_SERVICES">There are no hosting services configured.</phrase>
+    <phrase id="THERE_ARE_NO_REGISTERED_DOMAINS">There are no registered domains</phrase>
     <phrase id="THERE_IS_NO_CONTROL_PANEL_MODULE_CONFIGURED_FOR_THIS_SERVER">There is no control panel module configured for this server</phrase>
     <phrase id="THE_SERVER_YOU_SELECTED_DOES_NOT_SUPPORT_PROVISIONING">The server you have selected does not support provisioning.  Please select a server with a configured control panel module.</phrase>
     <phrase id="TITLE">Title</phrase>
