@@ -3,6 +3,7 @@
 
  * (trac #165) Tweaked the select box widget to show a "No Data" message whenever there are no options available.  
    The message can be customized by setting the "empty" parameter on the form_field tag.
+ * (trac #166) Also tweaked the table widget to show a "No Data" message.
 
 1/9/2007 - jdiamond
 =====================
